[package]
name = "platform-millis-arduino-nano"
version = "1.0.0"
edition = "2021"
description = "Specific millis reslization for arduino nano platform"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
platform-millis = { git = "https://github.com/boshtannik/platform-millis.git" }
avr-device = "0.5.1"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "190f2c3cb8d29e10f71119352b912369dc5a1fb7"
features = ["arduino-nano"]
