[package]
name = "platform-millis-arduino-nano"
version = "1.0.0"
edition = "2021"
description = "Specific millis reslization for arduino nano platform"
authors = ["Yevhen Shevchenko (boshtannik) <boshtannik@gmail.com>"]
readmme = "README.md"
repository = "https://github.com/boshtannik/platform-millis-arduino-nano"
license-file = "LICENSE"
keywords = ["embedded-nano-mesh", "platform", "millis"]
categories = ["embedded", "no-std", "date-and-time"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
platform-millis = "1.0.0"
avr-device = "0.5.1"

[dependencies.arduino-hal]
version = "0.1.0"
git = "https://github.com/rahix/avr-hal"
rev = "7dfa6d322b9df98b2d98afe0e14a97afe0187ac1"
features = ["arduino-nano"]
